--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.bwie.quarterhour"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -51,5 +51,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:1.0.6'
     testCompile 'junit:junit:4.12'
-    compile 'fm.jiecao:jiecaovideoplayer:2.0'
+    compile 'fm.jiecao:jiecaovideoplayer:+'
 }
