--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.ForgetActivity" />
         <activity android:name=".activity.UpdatePassActivity" />
-        <activity android:name=".activity.CreationActivity"></activity>
+        <activity android:name=".activity.CreationActivity" />
+        <activity android:name=".activity.JokesActivity"></activity>
     </application>
 
 </manifest>
