--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,12 @@
         <activity android:name=".activity.ForgetActivity" />
         <activity android:name=".activity.UpdatePassActivity" />
         <activity android:name=".activity.CreationActivity" />
-        <activity android:name=".activity.JokesActivity"></activity>
+        <activity android:name=".activity.JokesActivity" />
+        <activity
+            android:name=".activity.SuccessActivity"
+            android:label="@string/title_activity_success"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activity.DetailsActivity"></activity>
     </application>
 
 </manifest>
