--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.DetailsActivity" />
         <activity android:name=".activity.VideoActivity" />
-        <activity android:name=".activity.UserActivity"></activity>
+        <activity android:name=".activity.UserActivity" />
+        <activity android:name=".activity.AttentionActivity"></activity>
     </application>
 
 </manifest>
